--- a/index.html
+++ b/index.html
@@ -5,27 +5,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Esc] Hacker Escape Rooms</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c1ac69bc48.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header class="header">
-        <div class="logo-container">
-            <img src="/img/logo.png" alt="Logo" class="header-logo">
-            <h1 id="logo-h1">[Esc] Hacker Escape Rooms</h1>
+        <div class="logo-h1">
+            <div id="logo"></div>
+            <h1>[Esc]</h1>
         </div>
+        <div class="header-title">
+            <h1>Hacker Escape Rooms</h1>
+        </div>
+        <div class="hamburger">Hamburger</div>
         <div class="link-container">
             <a href="">Play online</a>
             <a href="">Play on-site</a>
             <a href="">The story</a>
             <a href="">Contact us</a>
         </div>
-
-
-
     </header>
+    <!--Så gott som klar-->
+    <main>
+        <div class="image-container">
+            <img src="https://picsum.photos/1000/400" alt="">
+        </div>
+        <div class="image-buttons">
+            <button class="image-buttons button-left">Online challenges</button>
+            <button class="image-buttons button-right">On-site challenges</button>
+        </div>
+        <div class="quotes">
+            <div class="quotes-left">
+                <div class="icon-background">
+                    <i class="fas fa-user"></i>
+                </div>
+                <p><em>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</em><br>
+                    <br>-Quote Author</p>
+            </div>
+            <div class="quotes-right">
+                <div class="icon-background">
+                    <i class="fas fa-user"></i>
+                </div>
+                <p><em>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</em>
+                    <br>-Quote Author</p>
+            </div>
 
+        </div>
+        <p class="text">Popular challenges right now</p>
+        <div class="container-cards">
+            <div class="card">
+                <img src="#" alt="Avatar" style="width:100%">
+                <div class="container">
+                    <h4><b>Title of challenge</b></h4>
+                    <p>Architect & Engineer</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="#" alt="Avatar" style="width:100%">
+                <div class="container">
+                    <h4><b>Title of room (on-site)</b></h4>
+                    <p>Architect & Engineer</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="#" alt="Avatar" style="width:100%">
+                <div class="container">
+                    <h4><b>Title of room (on-site)</b></h4>
+                    <p>Architect & Engineer</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
