--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c1ac69bc48.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -40,6 +42,7 @@
             <div class="quotes-left">
                 <div class="icon-background">
                     <i class="fas fa-user"></i>
+
                 </div>
                 <p><em>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</em><br>
                     <br>-Quote Author</p>
@@ -47,6 +50,7 @@
             <div class="quotes-right">
                 <div class="icon-background">
                     <i class="fas fa-user"></i>
+
                 </div>
                 <p><em>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</em>
                     <br>-Quote Author</p>
@@ -54,30 +58,124 @@
 
         </div>
         <p class="text">Popular challenges right now</p>
-        <div class="container-cards">
-            <div class="card">
-                <img src="#" alt="Avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>Title of challenge</b></h4>
-                    <p>Architect & Engineer</p>
+        <div class="card-outer">
+            <div class="card-left">
+                <div class="card-upper">
+                    <div class="card-upper-icon-container">
+                        <i class="fas fa-laptop"></i>
+                    </div>
+                    <div class="star-container">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                </div>
+                <div class="card-lower">
+                    <h4 class="card-lower-text">Title of challenge</h4>
+                    <h5 class="card-lower-text">2 participants (networked)</h5>
+                    <p id="card-p">Oportet uti solum de actibus prosecutionern et fugarn, haec leniter et blandus et reservato.</p>
+                    <div class="card-button-container">
+                        <button class="card-button">Take challenge online</button>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <img src="#" alt="Avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>Title of room (on-site)</b></h4>
-                    <p>Architect & Engineer</p>
+            <div class="card-middle">
+                <div class="card-upper">
+                    <div class="card-upper-icon-container">
+                        <i class="fas fa-home"></i>
+                    </div>
+                    <div class="star-container">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                </div>
+                <div class="card-lower">
+                    <h4 class="card-lower-text">Title of room (on-site)</h4>
+                    <h5 class="card-lower-text">2-6 participants</h5>
+                    <p id="card-p">Oportet uti solum de actibus prosecutionern et fugarn, haec leniter et blandus et reservato.</p>
+                    <div class="card-button-container">
+                        <button class="card-button">Book this room</button>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <img src="#" alt="Avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>Title of room (on-site)</b></h4>
-                    <p>Architect & Engineer</p>
+            <div class="card-right">
+                <div class="card-upper">
+                    <div class="card-upper-icon-container">
+                        <i class="fas fa-home"></i>
+                    </div>
+                    <div class="star-container">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                </div>
+                <div class="card-lower">
+                    <h4 class="card-lower-text">Title of room (on-site)</h4>
+                    <h5 class="card-lower-text">2-6 participants</h5>
+                    <p id="card-button">Oportet uti solum de actibus prosecutionern et fugarn, haec leniter et blandus et reservato.</p>
+
+                    <div class="card-button-container">
+                        <button class="card-button">Book this room</button>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="buttons-allchallenges">
+            <button id="challengeButtonLeft">All online challenges</button>
+            <button id="challengeButtonRight">All on-site challenges</button>
+        </div>
+        <p id="story">Quodsi haberent magnalia inter potentiam et divitias, et non illam quidem haec eo spectant haec quoque vos omnino desit illud quo solo felictatis libertatisque perficiuntur</p>
+        <div class="story-button-container">
+            <button>Read the full story</button>
+        </div>
+        <div class="pic-salestext-container">
+            <div class="pic-salestext-top-left">
+                <img src="https://picsum.photos/400/300" alt="">
+            </div>
+            <div class="pic-salestext-top-right">
+                <h2>Play with your friends or build your team stronger at work</h2>
+                <p>Tanta petere igitur, ne sinires memini fieri etiam aliquam inclinationem ad consequendum minima. Instead, oportet omnino quieti de rebus dialecticis differam, ed ad cetera munera.</p>
+                <button>Book on-site today</button>
+            </div>
+            <div class="pic-salestext-bottom-left">
+                <h2>Play online or visit our venue for one of our 25 escape rooms</h2>
+                <p>Tanta petere igitur, ne sinires memini fieri etiam aliquam inclinationem ad consequendum minima. Instead, oportet omnino quieti de rebus dialecticis differam, et ad cetera mununera.</p>
+                <button>Play online</button>
+                <button>Book on-site</button>
+            </div>
+            <div class="pic-salestext-bottom-right">
+                <img src="https://picsum.photos/400" alt="">
+            </div>
+        </div>
+
     </main>
+    <footer>
+        <div class="footer-text">
+            <h3>[Esc] Hacker Escape Rooms</h3>
+            <p>Sollicitan homines non sunt nisi quam formae rerum principiis opiniones. Mors enim est terribilis ut Socrati aliud esse apparet. Sed timor mrotis est notio</p>
+        </div>
+        <div class="site-map">
+            <h3>Site map</h3>
+            <a href="#">The Story</a><br>
+            <a href="#">Contact Us</a><br>
+            <a href="#">Legal</a><br>
+            <a href="#">Play online</a><br>
+            <a href="#">Play on-site</a>
+        </div>
+        <div class="follow-us">
+            <h3>Follow us on</h3>
+            <a href="#">Facebook</a><br>
+            <a href="#">Instagram</a><br>
+            <a href="#">YouTube</a>
+        </div>
+    </footer>
 </body>
 
 </html>
