Made some minor changes with sizes and properties

--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
         <div class="logo-container">
             <img id="logo" src="https://s3-alpha-sig.figma.com/img/9096/b17d/9b644c0fb4a4ddeb82daf9e66c5240c5?Expires=1636329600&Signature=Z1-kFWSQefsys7Wmw83og6FUh90eoQtNjZJDyL7INGAFlcidMVn~eYPpOxmlCQq9YyEHv1yzUsVSK84Ofte-2WglX4oInb3BgVJjPGz50fzW9FU3Xsofy8m4dB6A~BwftjVXgqY2RcqUqVjIFmDSNxAuJnyYpnBOtx5HXan748KnYwLfTMhVLSXzMjmP79vNBL7vRRJ7BTi9m6gMDdBnbKPtygO7OLOfreZqE2DXYU-MMbJL7X64MIE808Y4KgMjQTA3h8lT7GWxcwYuKFPX6bxRNhhlLCFT82SaPXnwn2WVivQnlK7I8dWyiBpeKRuCBxH~t0O-~tnpwPca5xGQDQ__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
                 alt="ESC Logo">
-        </div>
-        <div class="h1-container">
             <h1>Hacker Escape Rooms</h1>
         </div>
         <nav class="link-container">
             <a href="#" class="header-links">Play online</a>
             <a href="#" class="header-links">Play on-site</a>
             <a href="#" class="header-links">The story</a>
-            <a href="#" class="header-links">Contact us</a>
+            <a href="#" class="header-links" id="contact-us-link">Contact us</a>
         </nav>
     </header>
     <section class="image-container">
