Finished overflow:scroll on cards

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
             </div>
         </div>
     </section>
+    <p class="card-section__header">Popular challenges right now</p>
     <section class="section-cards">
-        <p class="card-section__header">Popular challenges right now</p>
+
         <div class="card-outer">
             <div class="card-container">
                 <div class="card-upper">
@@ -72,18 +73,21 @@
                         alt="">
                 </div>
                 <div class="card-lower">
-                    <div class="star-container">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
+                    <h4 class="card-lower-text">Title of room (on-site)</h4>
+                    <div class="star-h5-container">
+                        <div class="star-container">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <h5 class="card-lower-text">2-6 participants</h5>
                     </div>
-                    <h4 class="card-lower-text">Title of challenge</h4>
-                    <h5 class="card-lower-text">2 participants (networked)</h5>
-                    <p id="card-p">Oportet uti solum de actibus prosecutionern et fugarn, haec leniter et blandus et reservato.</p>
+                    <p id="card-p">Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+                    </p>
                     <div class="card-button-container">
-                        <button class="card-button">Take challenge online</button>
+                        <a href="#" class="card-button">Book this room</a>
                     </div>
                 </div>
             </div>
@@ -93,16 +97,21 @@
                         alt="">
                 </div>
                 <div class="card-lower">
-                    <div class="star-container">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                    </div>
+
                     <h4 class="card-lower-text">Title of room (on-site)</h4>
-                    <h5 class="card-lower-text">2-6 participants</h5>
-                    <p id="card-p">Oportet uti solum de actibus prosecutionern et fugarn, haec leniter et blandus et reservato.</p>
+                    <div class="star-h5-container">
+                        <div class="star-container">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+
+                        <h5 class="card-lower-text">2-6 participants</h5>
+                    </div>
+                    <p id="card-p">Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+                    </p>
                     <div class="card-button-container">
                         <button class="card-button">Book this room</button>
                     </div>
@@ -114,16 +123,19 @@
                         alt="">
                 </div>
                 <div class="card-lower">
-                    <div class="star-container">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                    </div>
                     <h4 class="card-lower-text">Title of room (on-site)</h4>
-                    <h5 class="card-lower-text">2-6 participants</h5>
-                    <p id="card-button">Oportet uti solum de actibus prosecutionern et fugarn, haec leniter et blandus et reservato.</p>
+                    <div class="star-h5-container">
+                        <div class="star-container">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <h5 class="card-lower-text">2-6 participants</h5>
+                    </div>
+                    <p id="card-button">Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+                    </p>
 
                     <div class="card-button-container">
                         <button class="card-button">Book this room</button>
