Finished styling cards

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Escape Hacker Room</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -113,7 +113,7 @@
                     <p id="card-p">Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
                     </p>
                     <div class="card-button-container">
-                        <button class="card-button">Book this room</button>
+                        <a href="#" class="card-button">Book this room</a>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                     </p>
 
                     <div class="card-button-container">
-                        <button class="card-button">Book this room</button>
+                        <a href="#" class="card-button">Book this room</an>
                     </div>
                 </div>
             </div>
@@ -147,10 +147,10 @@
     <section class="image-buttons-2">
         <div class="image-button__online-container-2">
             <a href="# ">Online challenges</a>
-        </div>
-        <div class="image-button__onsite-container-2">
-            <a href="#">On-site challenges</a>
-        </div>
+                    </div>
+                    <div class="image-button__onsite-container-2">
+                        <a href="#">On-site challenges</a>
+                    </div>
     </section>
     <article class="article-container">
         <div class="para-container">
