Updated source for imgs

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <img id="logo" src="https://s3-alpha-sig.figma.com/img/9096/b17d/9b644c0fb4a4ddeb82daf9e66c5240c5?Expires=1636329600&Signature=Z1-kFWSQefsys7Wmw83og6FUh90eoQtNjZJDyL7INGAFlcidMVn~eYPpOxmlCQq9YyEHv1yzUsVSK84Ofte-2WglX4oInb3BgVJjPGz50fzW9FU3Xsofy8m4dB6A~BwftjVXgqY2RcqUqVjIFmDSNxAuJnyYpnBOtx5HXan748KnYwLfTMhVLSXzMjmP79vNBL7vRRJ7BTi9m6gMDdBnbKPtygO7OLOfreZqE2DXYU-MMbJL7X64MIE808Y4KgMjQTA3h8lT7GWxcwYuKFPX6bxRNhhlLCFT82SaPXnwn2WVivQnlK7I8dWyiBpeKRuCBxH~t0O-~tnpwPca5xGQDQ__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-                alt="ESC Logo">
+            <img id="logo" src="/img/logo.png" alt="ESC Logo">
             <h1>Hacker Escape Rooms</h1>
         </div>
         <nav class="link-container">
@@ -31,8 +30,7 @@
         </nav>
     </header>
     <section class="image-container">
-        <img src="https://s3-alpha-sig.figma.com/img/0f85/bcb7/b31d0d0ae702ebc565f4c0483e706cf4?Expires=1636329600&Signature=Z1pGkYNIvcWRdGf0o7avM7eK~zOd8DCelf3-ApnyfnRxI8nyQpoufPV997e~nhQ1T~3MyMwJ~RKOXZa6nR18Oy5iinSnRjdC-sYVSSFXetwp8xZ5cnJFRXF93J8hC7YcGTdwCXt7y7Ji8xjHiZWo8FgW5B1LilOKALHtuLXrSIf7JTZfZBjx3ARsYuV0o2Tl9CDkq4YiT6UmtX2UX3PoGMRauugWcf5Dr4eGncFsZiLkFVbEHyEZTgHz2wpjEO-ox43l4S0G6lwQUcsvkiv5JVfwC8RzhgNZ6SxrhOVgAa0js~aeScTNGiz7J~k99M2d4kfgpzsNsH3Q8wyanfS6NA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-            alt="A man in front of a computer">
+        <img src="big-image.png" alt="A man in front of a computer">
     </section>
     <section class="image-buttons">
         <div class="image-button__online-container ">
@@ -45,8 +43,7 @@
     <section class="quotes">
         <div class="quotes-left">
             <div class="quotes-left__icon">
-                <img src="https://s3-alpha-sig.figma.com/img/7a69/8a6f/d15c9330d95c77c66222ba4a4eadd83f?Expires=1636329600&Signature=CsOxNn57Va9kj2Z1FMiZeaj6M2gc-G4G06cwfUoTOlfBTL9-eo0NAoVtANL~b6Hal86jy8ughlvlP2WSdjUcwsUKzwfnoZB68JCFwVBzA~rDzW7zU0R9bxmNExfmaCb~BF9FhNjV4xizbpXmAG3k68pYcGyRsjKwkCMQ7l6iPkC7ntvQl-bSdJ6K-~nWIkBx9RciOwR0TjEugy~Olf3ErnE6bVHNpeaFNon~8sMXlk-kFKQqUsBgQudu1XzaJyJE6WgSTs~WDglnccuBBRkOSs16EcYRYEfSh6inaexpi2~AS8RuGjqLqm0qXcVPpOF~V0tAqFz~q~3De56Z5dwy7w__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-                    alt="Profile picture of a man" class="profile">
+                <img src="profile.png" alt="Profile picture of a man" class="profile">
             </div>
             <div class="bq-container">
                 <blockquote class="bq">This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</blockquote>
@@ -56,8 +53,7 @@
 
         <div class="quotes-right">
             <div class="quotes-right__icon">
-                <img src="https://s3-alpha-sig.figma.com/img/7a69/8a6f/d15c9330d95c77c66222ba4a4eadd83f?Expires=1636329600&Signature=CsOxNn57Va9kj2Z1FMiZeaj6M2gc-G4G06cwfUoTOlfBTL9-eo0NAoVtANL~b6Hal86jy8ughlvlP2WSdjUcwsUKzwfnoZB68JCFwVBzA~rDzW7zU0R9bxmNExfmaCb~BF9FhNjV4xizbpXmAG3k68pYcGyRsjKwkCMQ7l6iPkC7ntvQl-bSdJ6K-~nWIkBx9RciOwR0TjEugy~Olf3ErnE6bVHNpeaFNon~8sMXlk-kFKQqUsBgQudu1XzaJyJE6WgSTs~WDglnccuBBRkOSs16EcYRYEfSh6inaexpi2~AS8RuGjqLqm0qXcVPpOF~V0tAqFz~q~3De56Z5dwy7w__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-                    alt="Profile picture of a man" class="profile">
+                <img src="profile.png" alt="Profile picture of a man" class="profile">
             </div>
             <div class="bq-container">
                 <blockquote class="bq">This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</blockquote>
@@ -71,8 +67,7 @@
         <div class="card-outer">
             <div class="card-container">
                 <div class="card-upper">
-                    <img src="https://s3-alpha-sig.figma.com/img/0f85/bcb7/b31d0d0ae702ebc565f4c0483e706cf4?Expires=1636329600&Signature=Z1pGkYNIvcWRdGf0o7avM7eK~zOd8DCelf3-ApnyfnRxI8nyQpoufPV997e~nhQ1T~3MyMwJ~RKOXZa6nR18Oy5iinSnRjdC-sYVSSFXetwp8xZ5cnJFRXF93J8hC7YcGTdwCXt7y7Ji8xjHiZWo8FgW5B1LilOKALHtuLXrSIf7JTZfZBjx3ARsYuV0o2Tl9CDkq4YiT6UmtX2UX3PoGMRauugWcf5Dr4eGncFsZiLkFVbEHyEZTgHz2wpjEO-ox43l4S0G6lwQUcsvkiv5JVfwC8RzhgNZ6SxrhOVgAa0js~aeScTNGiz7J~k99M2d4kfgpzsNsH3Q8wyanfS6NA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-                        alt="">
+                    <img src="big-image.png" alt="A man in front of a computer">
                 </div>
                 <div class="card-lower">
                     <h4 class="card-lower-text">Title of room (on-site)</h4>
@@ -83,7 +78,6 @@
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star-o"></span>
-
                         </div>
                         <h5 class="card-lower-text">2-6 participants</h5>
                     </div>
@@ -96,8 +90,7 @@
             </div>
             <div class="card-container">
                 <div class="card-upper">
-                    <img src="https://s3-alpha-sig.figma.com/img/0f85/bcb7/b31d0d0ae702ebc565f4c0483e706cf4?Expires=1636329600&Signature=Z1pGkYNIvcWRdGf0o7avM7eK~zOd8DCelf3-ApnyfnRxI8nyQpoufPV997e~nhQ1T~3MyMwJ~RKOXZa6nR18Oy5iinSnRjdC-sYVSSFXetwp8xZ5cnJFRXF93J8hC7YcGTdwCXt7y7Ji8xjHiZWo8FgW5B1LilOKALHtuLXrSIf7JTZfZBjx3ARsYuV0o2Tl9CDkq4YiT6UmtX2UX3PoGMRauugWcf5Dr4eGncFsZiLkFVbEHyEZTgHz2wpjEO-ox43l4S0G6lwQUcsvkiv5JVfwC8RzhgNZ6SxrhOVgAa0js~aeScTNGiz7J~k99M2d4kfgpzsNsH3Q8wyanfS6NA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-                        alt="">
+                    <img src="big-image.png" alt="A man in front of a computer">
                 </div>
                 <div class="card-lower">
 
@@ -123,8 +116,7 @@
             </div>
             <div class="card-container">
                 <div class="card-upper">
-                    <img src="https://s3-alpha-sig.figma.com/img/0f85/bcb7/b31d0d0ae702ebc565f4c0483e706cf4?Expires=1636329600&Signature=Z1pGkYNIvcWRdGf0o7avM7eK~zOd8DCelf3-ApnyfnRxI8nyQpoufPV997e~nhQ1T~3MyMwJ~RKOXZa6nR18Oy5iinSnRjdC-sYVSSFXetwp8xZ5cnJFRXF93J8hC7YcGTdwCXt7y7Ji8xjHiZWo8FgW5B1LilOKALHtuLXrSIf7JTZfZBjx3ARsYuV0o2Tl9CDkq4YiT6UmtX2UX3PoGMRauugWcf5Dr4eGncFsZiLkFVbEHyEZTgHz2wpjEO-ox43l4S0G6lwQUcsvkiv5JVfwC8RzhgNZ6SxrhOVgAa0js~aeScTNGiz7J~k99M2d4kfgpzsNsH3Q8wyanfS6NA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-                        alt="">
+                    <img src="big-image.png" alt="A man in front of a computer">
                 </div>
                 <div class="card-lower">
                     <h4 class="card-lower-text">Title of room (on-site)</h4>
@@ -166,8 +158,7 @@
     </article>
     <div class="pic-salestext-container">
         <div class="pic-salestext-a">
-            <img src="https://s3-alpha-sig.figma.com/img/4e06/08e6/f17528e2bdfd157eadc01a5414c38c73?Expires=1636329600&Signature=XNc7S1u0unGav~BOkLj6boDWkt86Tdy6TyC2djtYEoeKx6uKn5p9GEWNo9eEZ~2QCINo6hnP1asSxX207P8Q8fAE9EfY4r6qGgSQ7DqtOgolv2NVWt97EnlvX~-eI8p8Gs386RE3xNSCwk3U9cR3ns5b4BfLFOaIoaW5hk15geRY1Sf7qXUN~qrwgYK302YMzQ9s6qZxuKl7pTv7HE1pE1qv9b394ZgyaoEVM6rHizvhSJF4TkAI2FjCeQyWKZum6blTShMYfVwHbrhAgOMyAFSHhkEZEo~zOqfc81XvTyNBtQSiixiD43h7E1dobeer14j4BTbXPIBrmroWYEWlVw__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-                alt="A woman and a man watching a screen" id="pic-salestext-a">
+            <img src="pic-a.jpg" alt="A woman and a man watching a screen" id="pic-salestext-a">
         </div>
         <div class="pic-salestext" id="pic-salestext-b">
             <h2>Play with your friends or build your team stronger at work</h2>
@@ -175,8 +166,7 @@
             <a href="#" id="salestext-link">Book on-site today</a>
         </div>
         <div class="pic-salestext-c-container" id="pic-salestext-c">
-            <img src="https://s3-alpha-sig.figma.com/img/fcc3/3c41/6d8b163eeb302f0c791fbdb1128ed0ee?Expires=1636329600&Signature=PaOUDP4JSmslFxm3PDyidYtKOcSvWJgxflMxYA8NaZEFCn0EaI72vZBnk434dkUt9vwHLkWbhuDuzJt0g4osAEPcp2hEC5qqdjfLjd8relJPWowkcnCq~Aj9WeilinRMSKoew5u~mNZMIW967PxK8bB8qR-Fbx4qMgGJ~ACpubmgJR3jNI7sHhW3FiaZXHI2hWFlP5~I06e2LSkDexmZKDbhJfBWbuPg67myAWVPmo2KQRbmH30R2s8AtboCloieL86pO~zQsWtHVSXpBfGRQEgZJ3NSmqDxua6z2-aI-2yee6jlJ3BcvicOZphBWcSwC8Sba5tiPRzSL9QEm8DRDg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-                alt="A woman looking at a computer" id="pic-salestext-c">
+            <img src="pic-c.jpg" alt="A woman looking at a computer" id="pic-salestext-c">
         </div>
         <div class="pic-salestext" id="pic-salestext-d">
             <h2>Play online or visit our venue for one of our 25 escape rooms</h2>
