Updated source to imgs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <img id="logo" src="/img/logo.png" alt="ESC Logo">
+            <img id="logo" src="img/logo.png" alt="ESC Logo">
             <h1>Hacker Escape Rooms</h1>
         </div>
         <nav class="link-container">
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <section class="image-container">
-        <img src="big-image.png" alt="A man in front of a computer">
+        <img src="img/big-image.png" alt="A man in front of a computer">
     </section>
     <section class="image-buttons">
         <div class="image-button__online-container ">
@@ -43,7 +43,7 @@
     <section class="quotes">
         <div class="quotes-left">
             <div class="quotes-left__icon">
-                <img src="profile.png" alt="Profile picture of a man" class="profile">
+                <img src="img/profile.png" alt="Profile picture of a man" class="profile">
             </div>
             <div class="bq-container">
                 <blockquote class="bq">This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</blockquote>
@@ -53,7 +53,7 @@
 
         <div class="quotes-right">
             <div class="quotes-right__icon">
-                <img src="profile.png" alt="Profile picture of a man" class="profile">
+                <img src="img/profile.png" alt="Profile picture of a man" class="profile">
             </div>
             <div class="bq-container">
                 <blockquote class="bq">This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</blockquote>
@@ -67,7 +67,7 @@
         <div class="card-outer">
             <div class="card-container">
                 <div class="card-upper">
-                    <img src="big-image.png" alt="A man in front of a computer">
+                    <img src="img/big-image.png" alt="A man in front of a computer">
                 </div>
                 <div class="card-lower">
                     <h4 class="card-lower-text">Title of room (on-site)</h4>
@@ -90,7 +90,7 @@
             </div>
             <div class="card-container">
                 <div class="card-upper">
-                    <img src="big-image.png" alt="A man in front of a computer">
+                    <img src="img/big-image.png" alt="A man in front of a computer">
                 </div>
                 <div class="card-lower">
 
@@ -116,7 +116,7 @@
             </div>
             <div class="card-container">
                 <div class="card-upper">
-                    <img src="big-image.png" alt="A man in front of a computer">
+                    <img src="img/big-image.png" alt="A man in front of a computer">
                 </div>
                 <div class="card-lower">
                     <h4 class="card-lower-text">Title of room (on-site)</h4>
@@ -142,7 +142,7 @@
     </section>
     <section class="image-buttons-2">
         <div class="image-button__online-container-2">
-            <a href="# ">Online challenges</a>
+            <a href="#">Online challenges</a>
                     </div>
                     <div class="image-button__onsite-container-2">
                         <a href="#">On-site challenges</a>
@@ -158,7 +158,7 @@
     </article>
     <div class="pic-salestext-container">
         <div class="pic-salestext-a">
-            <img src="pic-a.jpg" alt="A woman and a man watching a screen" id="pic-salestext-a">
+            <img src="img/pic-a.jpg" alt="A woman and a man watching a screen" id="pic-salestext-a">
         </div>
         <div class="pic-salestext" id="pic-salestext-b">
             <h2>Play with your friends or build your team stronger at work</h2>
@@ -166,7 +166,7 @@
             <a href="#" id="salestext-link">Book on-site today</a>
         </div>
         <div class="pic-salestext-c-container" id="pic-salestext-c">
-            <img src="pic-c.jpg" alt="A woman looking at a computer" id="pic-salestext-c">
+            <img src="img/pic-c.jpg" alt="A woman looking at a computer" id="pic-salestext-c">
         </div>
         <div class="pic-salestext" id="pic-salestext-d">
             <h2>Play online or visit our venue for one of our 25 escape rooms</h2>
