--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 
 <body>
     <header class="header">
-        <div class="logo-container">
-            <img id="logo" src="img/logo.png" alt="ESC Logo">
-            <h1>Hacker Escape Rooms</h1>
+        <div class="header-container">
+            <div class="logo-container">
+                <img id="logo" src="img/logo.png" alt="ESC Logo">
+                <h1>Hacker Escape Rooms</h1>
+            </div>
+            <img src="img/icons8-menu-rounded-50.png" alt="" id="menuBtn">
+
         </div>
         <nav class="link-container">
             <a href="#" class="header-links">Play online</a>
@@ -206,6 +210,7 @@
 
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
