Added a popup in mobile version

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 </head>
 
 <body>
+    <div class="popup-container hidden" id="popup-container">
+        <button id="close">X</button>
+        <div class="ul-container">
+            <ul>
+                <li><a href="#">Play online</a></li>
+                <li><a href="#">Play on-site</a></li>
+                <li><a href="#">The story</a></li>
+                <li><a href="#">Contact us</a></li>
+
+            </ul>
+        </div>
+    </div>
     <header class="header">
         <div class="header-container">
             <div class="logo-container">
